--- a/index.html
+++ b/index.html
@@ -332,14 +332,14 @@
         }
 
         .tag {
-            padding: 0.25rem 0.7rem;
-            background: rgba(223, 1, 179, 0.1);
-            color: var(--text-primary);
-            border-radius: 12px;
-            font-size: 0.8rem;
-            font-weight: 500;
-            border: 1px solid var(--neon-pink);
-        }
+    padding: 0.25rem 0.7rem;
+    background: rgba(209, 184, 232, 0.1);
+    color: var(--text-primary);
+    border-radius: 12px;
+    font-size: 0.8rem;
+    font-weight: 500;
+    border: 1px solid #d1b8e8;
+}
 
         /* Recognition Section */
         .recognition-section {
