--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
         <section id="contact" class="contact-section">
             <h2 class="section-header">Say Hello</h2>
             <p class="contact-intro">
-                If you'd like to chat or see samples of my content portfolio or program impact, drop me a line. Cheers! (Or, connect with me on <a href="https://www.linkedin.com/in/egover" target="_blank" style="color: var(--neon-blue); text-decoration: none; font-weight: 500;">LinkedIn</a>.)
+                If you'd like to chat or see samples of my content portfolio or program impact, drop me a line. (Or, connect with me on <a href="https://www.linkedin.com/in/egover" target="_blank" style="color: var(--neon-blue); text-decoration: none; font-weight: 500;">LinkedIn</a>.) Cheers!
             </p>
 
             <div class="form-success" id="formSuccess">Thanks for getting in touch!</div>
