--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                 <div class="about-text">
                     <h1>Emily Gover</h1>
                     <p class="role">Customer marketing, content, and community strategist.</p>
-                    <p>Award-winning customer marketer, writer, storyteller, and community builder. Thought leader and trusted expert in building best-in-class customer marketing programs in tech. Currently at Docusign, formerly Dropbox, Vimeo, ed tech startups, and libraries. Occasional freelance writer, editor, and consultant.</p>
+                    <p>Award-winning customer marketer, writer, storyteller, and community builder. Thought leader and trusted expert in building best-in-class customer marketing programs in tech. Currently at Docusign, formerly Dropbox, Vimeo, ed tech startups, and libraries. Occasional freelance writer, editor, and consultant. Proud member of the Rancho Gordo Bean Club.</p>
                     <div class="cta-buttons">
                         <a href="#experience" class="btn btn-primary">Work Experience</a>
                         <a href="#contact" class="btn btn-secondary">Contact</a>
