--- a/index.html
+++ b/index.html
@@ -327,6 +327,8 @@
 
         .job:last-child {
             border-bottom: none;
+            padding-bottom: 0;
+            margin-bottom: 0;
         }
 
         .job-header {
