--- a/index.html
+++ b/index.html
@@ -389,17 +389,17 @@
         }
 
         .recognition-card {
-            padding: 1.5rem;
-            background: rgba(223, 1, 179, 0.05);
-            border: 1px solid var(--neon-pink);
-            border-radius: 8px;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
+    padding: 1.5rem;
+    background: rgba(209, 184, 232, 0.05); /* optional: soft lavender tint */
+    border: 1px solid #d1b8e8;
+    border-radius: 8px;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
 
         .recognition-card:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 20px rgba(255, 0, 255, 0.3);
-        }
+    transform: translateY(-3px);
+    box-shadow: 0 8px 20px rgba(209, 184, 232, 0.4);
+}
 
         .recognition-org {
             font-size: 1.1rem;
