--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
             }<!DOCTYPE html>
 <html lang="en">
 <head>
+  <style>
+  body { visibility: hidden; }
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emily Gover</title>
@@ -625,6 +628,7 @@
                 transform: scale(0) translateY(-20px);
             }
         }
+      body { visibility: visible; }
     </style>
 </head>
 <body>
