--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             <div class="recognition-grid">
                 <div class="recognition-card">
                     <div class="recognition-org">Customer Marketing Alliance</div>
-                    <div class="recognition-details">Rising Star Award Recipient (2024) • Advisory Board Member (2025) • Speaker, CMA San Francisco (2025)</div>
+                    <div class="recognition-details">Rising Star Award Recipient (2024) • Advisory Board Member (2025) • Speaker, CMA San Francisco (2024, 2025)</div>
                 </div>
 
                 <div class="recognition-card">
