--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
 
                 <div class="recognition-card recognition-card-full">
                     <div class="recognition-org">CliftonStrengths</div>
-                    <div class="recognition-details">Top 5</div>
+                    <div class="recognition-details">What makes me tick (and what I bring to a team)</div>
                     <div class="strengths-badges">
                         <span class="strength-badge strength-orange">Communication</span>
                         <span class="strength-badge strength-orange">Woo</span>
